--- a/app/src/main/res/layout/activity_startup_screen.xml
+++ b/app/src/main/res/layout/activity_startup_screen.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sharmy.taskr.StartupScreen">
+    tools:context="com.example.sharmy.taskr.StartupScreen"
+    android:background="@color/cast_expanded_controller_text_color">
 
     <ImageView
         android:layout_width="wrap_content"
