--- a/app/src/main/res/layout/activity_jobs.xml
+++ b/app/src/main/res/layout/activity_jobs.xml
@@ -10,4 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.sharmy.taskr.JobsActivity">
 
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:drawSelectorOnTop="false"
+        android:clickable="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="23dp"
+        android:layout_marginTop="75dp" />
+
+
 </RelativeLayout>
